--- a/141520519.md
+++ b/141520519.md
@@ -3,3 +3,8 @@ Figma; Gradstar web-app design
 <br>
 https://www.figma.com/design/sa6YkM4HDnty2XM3TZo8Mz/gradstar_redesign?node-id=0-1&m=dev&t=WgBFAKvFkX1xx2wa-1
 <br>
+
+Meeting link
+<br>
+https://teams.microsoft.com/meet/3388972344797?p=supWihnfDt39mLsYNO
+<br>
